fix: add tablet engine test

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,8 @@ function(compile_test DIR)
             add_executable(${TEST_TARGET_NAME} ${SRC_FILE} $<TARGET_OBJECTS:rtidb_proto>)
             if (${TEST_TARGET_NAME} STREQUAL "tablet_impl_mem_test")
                 target_link_libraries(${TEST_TARGET_NAME} tcmalloc ${TEST_LIBS} gtest)
+            elseif (${TEST_TARGET_NAME} STREQUAL "tablet_engine_test")
+                target_link_libraries(${TEST_TARGET_NAME} base_test ${TEST_LIBS} yaml-cpp boost_filesystem gtest)
             else()
                 target_link_libraries(${TEST_TARGET_NAME} ${TEST_LIBS} gtest)
             endif()
@@ -77,11 +79,13 @@ ${LLVM_LIBS}
 ${BRPC_LIBS})
 
 compile_test(base)
-compile_test(zk_client)
+compile_test(codec)
+compile_test(zk)
 compile_test(tablet)
 compile_test(nameserver)
 compile_test(storage)
 compile_test(replica)
+compile_test(catalog)
 compile_test(log)
 compile_test(blobserver)
 compile_test(blob_proxy)
