--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,43 +23,6 @@ style_check:
       junit:
         - ./reports/style.xml
 
-rdma-build:
-  image: develop-registry.4pd.io/centos6_gcc7_fesql_rdma:0.0.12
-  stage: build
-  except:
-    variables:
-      - $ENV_BUILD == "daily"
-  script:
-    - source /root/.bashrc && sh tools/install_fesql.sh
-    - ln -sf /depends/thirdparty thirdparty
-    - ln -sf /depends/thirdsrc thirdsrc
-    - source /root/.bashrc && RDMA=1 bash steps/simple_compile.sh
-    - mv build/bin/rtidb build/bin/rtidb_rdma
-  artifacts:
-    expire_in: 4h
-    paths:
-      - build/bin/rtidb_rdma
-  when: manual
-
-fpga-build:
-  image: develop-registry.4pd.io/centos6_gcc7_fesql_fpga:0.0.12
-  stage: build
-  tags:
-    - fpga
-  except:
-    variables:
-      - $ENV_BUILD == "daily"
-  script:
-    - source /root/.bashrc && sh tools/install_fesql.sh
-    - ln -sf /depends/thirdparty thirdparty
-    - ln -sf /depends/thirdsrc thirdsrc
-    - source /root/.bashrc && bash steps/simple_compile_fpga.sh
-  artifacts:
-    expire_in: 4h
-    paths:
-      - build/bin
-  when: manual
-
 build:
   stage: build
   script:
@@ -76,6 +39,7 @@ build:
       - build/bin/rtidb
       - build/bin/sql_sdk_test
       - build/bin/sql_cluster_test
+      - build/bin/tablet_engine_test
       - build/src/sdk/libsql_jsdk.so
       - build/sql_pysdk/dist/*.whl
       - build/python/dist/*.whl
@@ -118,58 +82,6 @@ daily_build:
 #     variables:
 #       - $ENV_BUILD == "daily"
 
-fpga_c++_ut:
-  image: develop-registry.4pd.io/centos6_gcc7_fesql_fpga:0.0.12
-  tags:
-    - fpga
-  stage: manual
-  script:
-    - source /root/.bashrc && sh tools/install_fesql.sh
-    - ln -sf /depends/thirdparty thirdparty
-    - ln -sf /depends/thirdsrc thirdsrc
-    - source /opt/fpga-rte-aclrte-19.2.0.57-v0.2.1/init-fpga.sh
-    - source /root/.bashrc && bash steps/fpga_compile.sh
-    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/ut.sh
-  artifacts:
-    reports:
-      junit:
-        - reports/*.xml
-  dependencies:
-    - build
-  except:
-    variables:
-      - $ENV_BUILD == "daily"
-  when: manual
-
-#fpga_java_ut:
-#  image: develop-registry.4pd.io/centos6_gcc7_fesql_fpga:0.0.12
-#  tags:
-#    - fpga
-#  stage: test
-#  except:
-#    variables:
-#      - $ENV_BUILD == "daily"
-#  before_script:
-#    - mkdir /rambuild
-#    - mount -t tmpfs -o size=3G tmpfs /rambuild
-#  script:
-#    - ln -sf /depends/thirdparty thirdparty
-#    - ln -sf /depends/thirdsrc thirdsrc
-#    - source /root/.bashrc && sh tools/install_fesql.sh
-#    - source /root/.bashrc && bash steps/simple_compile_fpga.sh
-#    - source /root/.bashrc && LD_LIBRARY_PATH=/depends/thirdparty/lib:$LD_LIBRARY_PATH bash steps/java_ut.sh
-#  after_script:
-#    - tar czvf $CI_COMMIT_SHA rtidb-auto-test-java/target/allure-results
-#    - bash steps/upload-nexus.sh $CI_COMMIT_SHA
-#    - curl -s "http://auto.4paradigm.com/job/rtidb-test-report/buildWithParameters?token=gitlab&allure_path=rtidb-auto-test-java/target/allure-results&pkg=$CI_COMMIT_SHA&buildname=$CI_PIPELINE_ID"-"$CI_JOB_ID"
-#    - bash steps/get-report-url.sh rtidb-test-report $CI_PIPELINE_ID"-"$CI_JOB_ID
-#  artifacts:
-#    reports:
-#      junit:
-#        - java/target/surefire-reports/junitreports/TEST-*.xml
-#        - java/target/surefire-reports/TEST-*.xml
-#        - java/target/failsafe-reports/junitreports/TEST-*.xml
-#        - java/target/failsafe-reports/TEST-*.xml
 
 java_ut:
   stage: quick
@@ -548,28 +460,6 @@ ns_multi_demension:
     variables:
       - $ENV_BUILD == "daily"
 
-disk_table:
-  stage: manual
-  before_script:
-    - mkdir /rambuild
-    - mount -t tmpfs -o size=3G tmpfs /rambuild
-  script:
-    - ln -sf /depends/thirdparty thirdparty
-    - ln -sf /depends/thirdsrc thirdsrc
-    - sed -i 's/log_level\ =\ debug/log_level\ =\ info/g' test-common/integrationtest/conf/test.conf
-    - source /root/.bashrc && source /opt/rh/python27/enable && sh steps/integration_test_on_ramdir.sh 0 "disk"
-    - cp -r /rambuild/rtidb/test-output/integrationtest/test-reports ./
-  artifacts:
-    reports:
-      junit:
-        - ./test-reports/*
-  dependencies:
-    - build
-  except:
-    variables:
-      - $ENV_BUILD == "daily"
-  when: manual
-
 deploy-fedb:
   stage: daily
   script:
@@ -579,37 +469,6 @@ deploy-fedb:
   dependencies:
     # - mac_build
     - daily_build
-  only:
-    variables:
-      - $ENV_BUILD == "daily"
-
-deploy-fedb-fpga:
-  image: develop-registry.4pd.io/centos6_gcc7_fesql_fpga:0.0.12
-  tags:
-    - fpga
-  stage: daily
-  script:
-    - ln -sf /depends/thirdparty thirdparty
-    - ln -sf /depends/thirdsrc thirdsrc
-    - source /root/.bashrc && sh tools/install_fesql.sh
-    - source /root/.bashrc && bash steps/simple_compile_fpga.sh
-    - source /root/.bashrc && bash steps/package_and_upload_fedb_fpga.sh
-  only:
-    variables:
-      - $ENV_BUILD == "daily"
-
-#TODO(kongquan) python support enable rdma switch
-deploy-fedb-rdma:
-  image: develop-registry.4pd.io/centos6_gcc7_fesql_rdma:0.0.12
-  stage: deploy
-  script:
-    - ln -sf /depends/thirdparty thirdparty
-    - ln -sf /depends/thirdsrc thirdsrc
-    - source /root/.bashrc && sh tools/install_fesql.sh
-    - source /root/.bashrc && bash steps/simple_compile_fpga.sh
-    - source /root/.bashrc && bash steps/package_and_upload_fedb_rdma.sh
-  dependencies:
-    - rdma-build
   only:
     variables:
       - $ENV_BUILD == "daily"
