test: add enable flag

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -78,17 +78,19 @@ ${VM_LIBS}
 ${LLVM_LIBS}
 ${BRPC_LIBS})
 
-compile_test(base)
-compile_test(codec)
-compile_test(zk)
-compile_test(tablet)
-compile_test(nameserver)
-compile_test(storage)
-compile_test(replica)
-compile_test(catalog)
-compile_test(log)
-compile_test(blobserver)
-compile_test(blob_proxy)
+if(TESTING_ENABLE)
+    compile_test(base)
+    compile_test(codec)
+    compile_test(zk)
+    compile_test(tablet)
+    compile_test(nameserver)
+    compile_test(storage)
+    compile_test(replica)
+    compile_test(catalog)
+    compile_test(log)
+    compile_test(blobserver)
+    compile_test(blob_proxy)
+endif()
 
 add_executable(parse_log tools/parse_log.cc  $<TARGET_OBJECTS:rtidb_proto>)
 target_link_libraries(parse_log log rtidb_proto base protobuf glog gflags unwind lzma ssl crypto z snappy dl pthread)
