--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
 endif ()
 add_definitions(-DHAVE_STDBOOL_H=1)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+option(TESTING_ENABLE "Enable test" ON)
 option(TCMALLOC_ENABLE "Enable TCMALLOC" ON)
 option(PZFPGA_ENABLE "Enable pz compression for ssd tables" OFF)
 option(SQL_PYSDK_ENABLE "Enable sql pysdk" ON)
