--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,7 @@ endif ()
 
 set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/release)
 
-install(TARGETS fesql_core fesql_sdk
+install(TARGETS fesql_core
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
