--- a/src/benchmark/CMakeLists.txt
+++ b/src/benchmark/CMakeLists.txt
@@ -48,7 +48,7 @@ foreach(BENCHMARK_SCRIPT ${BENCHMARK_EXEC_FILE_LIST})
         add_executable(${BENCHMARK_TARGET_NAME} ${BENCHMARK_SCRIPT})
 
         target_link_libraries(${BENCHMARK_TARGET_NAME}
-            fesql_sdk fesql_flags fesql_bm_lib ${BENCHMARK_LIBS} benchmark sqlite3)
+            fesql_sdk fesql_flags fesql_bm_lib ${BENCHMARK_LIBS} benchmark)
         list(APPEND BENCHMARK_TARGET_LIST ${BENCHMARK_TARGET_NAME})
 endforeach()
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
@@ -70,7 +70,7 @@ if (TESTING_ENABLE)
 
         target_link_libraries(${TEST_TARGET_NAME}
             fesql_bm_lib fesql_sdk fesql_flags
-            gtest benchmark ${yaml_libs} ${BRPC_LIBS} ${OS_LIBS} ${g_libs} sqlite3)
+            gtest benchmark ${yaml_libs} ${BRPC_LIBS} ${OS_LIBS} ${g_libs})
         list(APPEND test_list ${TEST_TARGET_NAME})
     endforeach()
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
