--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,11 @@ if (CMAKE_BUILD_TYPE STREQUAL "")
     set(CMAKE_BUILD_TYPE RelWithDebInfo)
 endif ()
 message (STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
-set(RTIDB_VERSION_MAJOR 1)
-set(RTIDB_VERSION_MEDIUM 6)
-set(RTIDB_VERSION_MINOR 2)
-set(RTIDB_VERSION_BUG 0)
-set(RTIDB_COMMIT_ID 0)
+set(FEDB_VERSION_MAJOR 1)
+set(FEDB_VERSION_MEDIUM 6)
+set(FEDB_VERSION_MINOR 2)
+set(FEDB_VERSION_BUG 0)
+set(FEDB_COMMIT_ID 0)
 set(FESQL_COMMIT_ID 0)
 
 function(get_commitid CODE_DIR COMMIT_ID)
@@ -45,9 +45,9 @@ function(get_commitid CODE_DIR COMMIT_ID)
     set("${COMMIT_ID}" ${COMMIT_ID_TMP} PARENT_SCOPE)
 endfunction()
 
-get_commitid(${PROJECT_SOURCE_DIR} RTIDB_COMMIT_ID)
+get_commitid(${PROJECT_SOURCE_DIR} FEDB_COMMIT_ID)
 get_commitid(${PROJECT_SOURCE_DIR}/fesql FESQL_COMMIT_ID)
-message(STATUS "COMMIT_ID : ${RTIDB_COMMIT_ID}.${FESQL_COMMIT_ID}")
+message(STATUS "COMMIT_ID : ${FEDB_COMMIT_ID}.${FESQL_COMMIT_ID}")
 configure_file (
   "${PROJECT_SOURCE_DIR}/src/version.h.in"
   "${PROJECT_SOURCE_DIR}/src/version.h"
